2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the implementation of cap_discard, if
	cap_to_object_soft fails, only return ENOENT if the version does
	not match.  If the object is not in memory, still clear the
	content bit.  Don't forget to free the memory.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (main): Move assert from here...
	* object.c (object_init): ... to here.  Use build_asserts, not
	asserts to check object sizes.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In object_discarded_clear
	implementation, if the capability is weak, return EPERM.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement cap_discard.
	* rm.h (rm_method_id_string): Handle the RM_object_discard case.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* ager.c (update_stats): When we mean ACTIVITY, use ACTIVITY, not
	P.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_desc_claim): Declare and initialize EC.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* profile.c (extant): New variable.
	(profile_start): Increment it.
	(profile_end): Decrement it.  Only add the time to TOTAL_TIME if
	EXTANT is 0.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Change AGE from a uint16_t to a
	uint8_t.
	* ager.c (ager_loop): Set TIMEOUT to a quarter of a second.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* ager.c (update_stats): New function.  Update statistics and
	implement available algorithm.
	(ager_loop): Don't update update statistics here, call
	update_stats.

	(ager_loop): Profile time spent unmapping pages.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* memory.c (memory_frame_allocate): If we discard a page, update
	DESC->ACTIVITY's DISCARDED statistic.

	* pager.c (pager_collect): When we collect an activity, update
	its pressure statistic.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* pager.c: Include "profile.h".